structmeta-tests/tests/compile_fail/struct_meta/expected_flag_but_name_value.stderr
error: expected flag `value`, found `value = ...`
 --> $DIR/expected_flag_but_name_value.rs:1:31
  |
1 | #[structmeta_tests::attr_flag(value = 10)]
  |                               ^^^^^
